--- a/js/jsDeveloper.html
+++ b/js/jsDeveloper.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Document</title>
+     <script>
+          
+     </script>
+     <script src="scripts.js"></script>
+</head>
+<body>
+     
+</body>
+</html>
+
 <!-- html:5 باستخدام HTMLقم بتهيئة ملفك ال -->
 
 <!-- HTMLبصفحتك ال scripts.js قم بربط ملف -->
